--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "doyouknowdeway",
-  "version": "0.1.0",
+  "version": "v0.1.1-dev",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
