--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "main": "index.js",
   "dependencies": {
     "core-js": "^3.6.5",
+    "pinia": "^2.0.13",
     "vue": "^3.0.0",
     "vue-router": "^4.0.14"
   },
