--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "pinia": "^2.0.13",
     "vue": "^3.0.0",
